ver. 0.2
ver. 0.2
- logging
- optimize services and aggregate services
- some new tests (bad one)
- gc configuration
- logger configuration